--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="W7v-US-IQx">
-                                <rect key="frame" x="0.0" y="44" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="vON-nI-W85">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="article_cell" id="vON-nI-W85">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vON-nI-W85" id="ZFg-Ed-eNW">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -29,9 +29,15 @@
                                 </prototypes>
                             </tableView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DsX-yd-4Hq">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="oPd-gN-SBE"/>
+                                    <navigationItem title="Title" id="oPd-gN-SBE">
+                                        <barButtonItem key="rightBarButtonItem" title="History" id="UYP-np-Uhg">
+                                            <connections>
+                                                <segue destination="Il3-yY-NjD" kind="show" identifier="show_history" id="fWj-Ap-tkf"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -39,17 +45,83 @@
                         <constraints>
                             <constraint firstItem="DsX-yd-4Hq" firstAttribute="leading" secondItem="93d-0N-uPX" secondAttribute="leading" id="2vb-SX-DBN"/>
                             <constraint firstItem="W7v-US-IQx" firstAttribute="top" secondItem="DsX-yd-4Hq" secondAttribute="bottom" id="5QH-El-1J6"/>
-                            <constraint firstAttribute="bottom" secondItem="W7v-US-IQx" secondAttribute="bottom" constant="-44" id="RKv-rc-MuL"/>
+                            <constraint firstItem="DsX-yd-4Hq" firstAttribute="top" secondItem="hva-2W-vXG" secondAttribute="bottom" id="Ndn-ny-DYR"/>
+                            <constraint firstAttribute="bottom" secondItem="W7v-US-IQx" secondAttribute="bottom" id="RKv-rc-MuL"/>
                             <constraint firstItem="DsX-yd-4Hq" firstAttribute="top" secondItem="93d-0N-uPX" secondAttribute="top" id="czh-HP-Mg1"/>
                             <constraint firstAttribute="trailing" secondItem="DsX-yd-4Hq" secondAttribute="trailing" id="lhS-lU-pzW"/>
                             <constraint firstAttribute="trailing" secondItem="W7v-US-IQx" secondAttribute="trailing" id="x1H-sc-bHm"/>
                             <constraint firstItem="W7v-US-IQx" firstAttribute="leading" secondItem="93d-0N-uPX" secondAttribute="leading" id="yRT-Mk-Pkh"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="czh-HP-Mg1"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdO-MH-APD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="477" y="-384"/>
+            <point key="canvasLocation" x="223" y="-406"/>
+        </scene>
+        <!--Recently Read View Controller-->
+        <scene sceneID="5M0-fy-lZd">
+            <objects>
+                <viewController id="Il3-yY-NjD" customClass="RecentlyReadViewController" customModule="NewsLater" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8Nu-Ev-L2Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="VOu-hJ-lUs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pmw-bD-FJB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVZ-yG-5CO">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="History" id="VAa-oO-YD9">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="jcw-92-zvg">
+                                            <connections>
+                                                <segue destination="vu9-F8-Qgc" kind="unwind" unwindAction="returnToFeed:" id="PLP-96-vwh"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="btm-lG-mzH">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="article_cell" id="dbu-sS-XvW">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dbu-sS-XvW" id="Jfo-MV-lVI">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="btm-lG-mzH" secondAttribute="bottom" id="4ga-L3-WY8"/>
+                            <constraint firstAttribute="trailing" secondItem="btm-lG-mzH" secondAttribute="trailing" id="LOx-yX-VdF"/>
+                            <constraint firstItem="btm-lG-mzH" firstAttribute="leading" secondItem="pmw-bD-FJB" secondAttribute="leading" id="O3r-Sg-smR"/>
+                            <constraint firstAttribute="trailing" secondItem="OVZ-yG-5CO" secondAttribute="trailing" id="Vmu-rz-yGa"/>
+                            <constraint firstItem="OVZ-yG-5CO" firstAttribute="top" secondItem="pmw-bD-FJB" secondAttribute="top" id="YkL-Ra-CLt"/>
+                            <constraint firstItem="btm-lG-mzH" firstAttribute="top" secondItem="OVZ-yG-5CO" secondAttribute="bottom" id="iaf-Rh-C9j"/>
+                            <constraint firstItem="OVZ-yG-5CO" firstAttribute="leading" secondItem="pmw-bD-FJB" secondAttribute="leading" id="qCE-gY-HcL"/>
+                            <constraint firstItem="OVZ-yG-5CO" firstAttribute="top" secondItem="8Nu-Ev-L2Z" secondAttribute="bottom" id="vdH-ax-Ojb"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="YkL-Ra-CLt"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TMo-Rp-etN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="vu9-F8-Qgc" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1075" y="-406"/>
         </scene>
     </scenes>
 </document>
