--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -51,6 +51,57 @@
             </objects>
             <point key="canvasLocation" x="1071" y="-336"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="eJ6-Xl-lls">
+            <objects>
+                <viewController id="vfd-EF-xUl" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="p43-ll-F9i"/>
+                        <viewControllerLayoutGuide type="bottom" id="yQA-C8-cRw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qva-Kp-Kad">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PCB-XX-VUH">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Reminder" id="r4n-mR-Jbt">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="xOY-jg-fgA"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="add" id="N8S-ai-PHB"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="g7h-eM-dlv">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3SN-Ub-WtX">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3SN-Ub-WtX" id="tRF-V3-2dY">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="PCB-XX-VUH" secondAttribute="trailing" id="0cG-Ok-B4u"/>
+                            <constraint firstItem="PCB-XX-VUH" firstAttribute="leading" secondItem="Qva-Kp-Kad" secondAttribute="leading" id="MaX-AR-Z7K"/>
+                            <constraint firstAttribute="trailing" secondItem="g7h-eM-dlv" secondAttribute="trailing" id="hdg-hh-DoB"/>
+                            <constraint firstAttribute="bottom" secondItem="g7h-eM-dlv" secondAttribute="bottom" id="pMg-yv-rFB"/>
+                            <constraint firstItem="g7h-eM-dlv" firstAttribute="leading" secondItem="Qva-Kp-Kad" secondAttribute="leading" id="pcr-Sx-muc"/>
+                            <constraint firstItem="PCB-XX-VUH" firstAttribute="top" secondItem="p43-ll-F9i" secondAttribute="bottom" id="vC7-HI-zLp"/>
+                            <constraint firstItem="g7h-eM-dlv" firstAttribute="top" secondItem="PCB-XX-VUH" secondAttribute="bottom" id="zy5-kf-Bhs"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NdW-x5-chO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="719" y="446"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="5zi-dp-KXq">
             <objects>
@@ -61,13 +112,27 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="WC1-y7-lDb"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yfu-v2-KO8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="279" y="-336"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="5Mp-pu-CRo">
+            <objects>
+                <viewController id="cQf-dm-qvz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vph-HK-YDI"/>
+                        <viewControllerLayoutGuide type="bottom" id="uNw-oq-oEk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ueg-Zb-0yX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1es-7S-e4l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
