--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -63,6 +63,54 @@
             </objects>
             <point key="canvasLocation" x="223" y="-406"/>
         </scene>
+        <!--Reminders View Controller-->
+        <scene sceneID="D24-dK-xRE">
+            <objects>
+                <viewController id="Tr8-Rk-8So" customClass="RemindersViewController" customModule="NewsLater" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZEy-Lj-8DW"/>
+                        <viewControllerLayoutGuide type="bottom" id="BXs-HO-hkK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BVn-QD-aaj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xiD-hm-DjF">
+                                <rect key="frame" x="11" y="20" width="47" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="xDh-Rb-9Cz"/>
+                                </items>
+                            </navigationBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXN-yI-Rqt">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="Bzb-np-zqX">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MGo-hH-E39">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HXN-yI-Rqt" secondAttribute="trailing" id="3fn-1R-Fng"/>
+                            <constraint firstItem="xiD-hm-DjF" firstAttribute="top" secondItem="ZEy-Lj-8DW" secondAttribute="bottom" id="7LL-iZ-mNe"/>
+                            <constraint firstItem="HXN-yI-Rqt" firstAttribute="leading" secondItem="BVn-QD-aaj" secondAttribute="leading" id="A4U-qd-Peg"/>
+                            <constraint firstAttribute="trailing" secondItem="MGo-hH-E39" secondAttribute="trailing" id="EH0-uw-pRc"/>
+                            <constraint firstItem="HXN-yI-Rqt" firstAttribute="top" secondItem="ZEy-Lj-8DW" secondAttribute="bottom" id="Lzx-0D-cRd"/>
+                            <constraint firstItem="MGo-hH-E39" firstAttribute="top" secondItem="HXN-yI-Rqt" secondAttribute="bottom" id="Qiv-kV-WMg"/>
+                            <constraint firstItem="MGo-hH-E39" firstAttribute="leading" secondItem="BVn-QD-aaj" secondAttribute="leading" id="cd3-tC-cLJ"/>
+                            <constraint firstAttribute="bottom" secondItem="MGo-hH-E39" secondAttribute="bottom" id="gcI-Fz-XGQ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wkm-z8-QGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="223" y="337"/>
+        </scene>
         <!--Recently Read View Controller-->
         <scene sceneID="5M0-fy-lZd">
             <objects>
@@ -122,6 +170,55 @@
                 <exit id="vu9-F8-Qgc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1075" y="-406"/>
+        </scene>
+        <!--Article View Controller-->
+        <scene sceneID="9md-o7-GXQ">
+            <objects>
+                <viewController id="LAI-zI-d0b" customClass="ArticleViewController" customModule="NewsLater" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7Bf-Dl-X9E"/>
+                        <viewControllerLayoutGuide type="bottom" id="Uhw-16-cGu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JbB-Wa-lel">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jd7-Ce-Uv3">
+                                <rect key="frame" x="-55" y="20" width="20" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="Bed-Wf-nDL"/>
+                                </items>
+                            </navigationBar>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQ8-Qa-GsI">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="FUf-1y-iVo">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="C34-nz-UVE"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="UFF-Ha-qBl"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aCz-0B-dgd">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="aCz-0B-dgd" secondAttribute="bottom" id="5Tn-pO-BdZ"/>
+                            <constraint firstItem="oQ8-Qa-GsI" firstAttribute="leading" secondItem="JbB-Wa-lel" secondAttribute="leading" id="C88-TK-3Be"/>
+                            <constraint firstItem="oQ8-Qa-GsI" firstAttribute="top" secondItem="7Bf-Dl-X9E" secondAttribute="bottom" id="Kue-Dh-OGp"/>
+                            <constraint firstItem="aCz-0B-dgd" firstAttribute="top" secondItem="oQ8-Qa-GsI" secondAttribute="bottom" id="ONT-CZ-F2I"/>
+                            <constraint firstAttribute="trailing" secondItem="aCz-0B-dgd" secondAttribute="trailing" id="QRr-IG-T32"/>
+                            <constraint firstAttribute="trailing" secondItem="oQ8-Qa-GsI" secondAttribute="trailing" id="Zom-77-OiN"/>
+                            <constraint firstItem="aCz-0B-dgd" firstAttribute="leading" secondItem="JbB-Wa-lel" secondAttribute="leading" id="cA5-mK-hPR"/>
+                            <constraint firstItem="jd7-Ce-Uv3" firstAttribute="top" secondItem="7Bf-Dl-X9E" secondAttribute="bottom" id="cEA-OH-nqj"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="igl-8X-O1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1075" y="328"/>
         </scene>
     </scenes>
 </document>
