--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wmp-M8-cNh">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
@@ -85,7 +85,11 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="Bzb-np-zqX">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="mty-9B-Z03">
+                                            <connections>
+                                                <segue destination="KWX-Tf-BA9" kind="unwind" unwindAction="returnToFeed:" id="W45-iv-66L"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -108,6 +112,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wkm-z8-QGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="KWX-Tf-BA9" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="223" y="337"/>
         </scene>
@@ -129,7 +134,7 @@
                                     <navigationItem title="History" id="VAa-oO-YD9">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="jcw-92-zvg">
                                             <connections>
-                                                <segue destination="vu9-F8-Qgc" kind="unwind" unwindAction="returnToFeed:" id="PLP-96-vwh"/>
+                                                <segue destination="vu9-F8-Qgc" kind="unwind" unwindAction="returnToFeed:" id="JyN-k2-fZm"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -193,8 +198,16 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="FUf-1y-iVo">
-                                        <barButtonItem key="leftBarButtonItem" title="Back" id="C34-nz-UVE"/>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="UFF-Ha-qBl"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="C34-nz-UVE">
+                                            <connections>
+                                                <segue destination="hz0-aR-eLa" kind="unwind" unwindAction="returnToFeed:" id="XSF-yv-pRJ"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="UFF-Ha-qBl">
+                                            <connections>
+                                                <action selector="share:" destination="LAI-zI-d0b" id="mdi-B8-2Ud"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -217,6 +230,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="igl-8X-O1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="hz0-aR-eLa" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1075" y="328"/>
         </scene>
