reminder cell alignment

--- a/NewsLater/Base.lproj/Main.storyboard
+++ b/NewsLater/Base.lproj/Main.storyboard
@@ -62,20 +62,27 @@
                                             <outlet property="title" destination="zaR-uo-5Ju" id="M4g-fC-DFS"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="setting_cell" textLabel="ThJ-YE-fgx" style="IBUITableViewCellStyleDefault" id="Rz9-EZ-ZZf">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="setting_cell" id="Rz9-EZ-ZZf" customClass="ReminderTableViewCell" customModule="NewsLater" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rz9-EZ-ZZf" id="sOV-uo-3Pp">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ThJ-YE-fgx">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dmp-6V-PtP">
+                                                    <rect key="frame" x="35" y="14" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerX" secondItem="dmp-6V-PtP" secondAttribute="centerX" id="3FU-PK-pb6"/>
+                                                <constraint firstAttribute="centerY" secondItem="dmp-6V-PtP" secondAttribute="centerY" id="zev-Sz-NAD"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="title" destination="dmp-6V-PtP" id="Slm-Gf-9Ad"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
